--- a/recipe-page-main/index2.html
+++ b/recipe-page-main/index2.html
@@ -15,7 +15,7 @@
         <div class="recipe-information">
             <h1>Receita Simples de Omelete</h1>
             <p class="description">
-                Um prato fácil e rápido, perfeito para qualquer refeição. Esta omelete clássica combina ovos batidos 
+                Um prato fácil e rápido, perfeito para qualquer refeição. Este omelete clássico combina ovos batidos 
                 cozido na perfeição, opcionalmente recheado com queijo, vegetais ou carnes à sua escolha.
             </p>
 
